Fix path to photos

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ description              : "This is about recording this and that in my life."
 url                      : "https://gangmuk.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/Users/gangmuk/projects/gangmuk.github.io/photos/annapurna_0.png"
-logo                     : "/Users/gangmuk/projects/gangmuk.github.io/photos/.sahara_camel_shot_0.png"
+teaser                   : "/photos/annapurna_0.png"
+logo                     : "/photos/.sahara_camel_shot_0.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
