--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ minimal_mistakes_skin    : "dirt" #"default" # "air", "aqua", "contrast", "dark"
 locale                   : "en-US"
 title                    : "Gangmuk' Blog"
 title_separator          : "-"
-subtitle                 : "Subtitle: Explore."
+subtitle                 : "Subtitle: Explore2."
 name                     : "Gangmuk"
 description              : "This is about recording this and that in my life."
 url                      : "https://gangmuk.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "gangmuk.github.io/photos/annapurna_0.png"
-logo                     : "gangmuk.github.io/photos/sahara_camel_shot_0.png"
+teaser                   : "/photos/annapurna_0.png"
+logo                     : "/photos/sahara_camel_shot_0.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
