Add a main menu for vocab page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,6 @@
 # main link
 main:
   - title: "BlogMap"
-    url: https://gangmuk.github.io/blogmap
+    url: https://gangmuk.github.io/blogmap/
+  - title: "Vocab"
+    url: /vocab/
