--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title_separator          : "-"
 subtitle                 : "Subtitle: Explore2."
 name                     : "Gangmuk"
 description              : "This is about recording this and that in my life."
-url                      : "https://gangmuk.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://gangmuk.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/photos/annapurna_0.png"
