--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,13 @@
 main:
   - title: "BlogMap"
     url: https://gangmuk.github.io/blogmap/
+  - title: "Todo"
+    url: /todo/
   - title: "Vocab"
     url: /vocab/
+  - title: "Stretching"
+    url: /stretching/
+  - title: "Scrap"
+    url: /scrap/
+  - title: "ConsultingAds"
+    url: /consulting/
