--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@ main:
     url: /stretching/
   - title: "Scrap"
     url: /scrap/
-  - title: "ConsultingAds"
-    url: /consulting/
+#  - title: "ConsultingAds"
+#    url: /consulting/
