--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main link
 main:
+  - title: "CV"
+    url: /cv/
   - title: "BlogMap"
     url: https://gangmuk.github.io/blogmap/
   - title: "Todo"
