--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,8 @@ analytics:
 author:
   name             : "Gangmuk Lim"
   avatar           : "/photos/sahara_camel_shot_0.png"
-  bio              : "This place will be a heart of my deceleration. "
-  location         : "South Korea (about to move to US for pursuing PhD)"
+  bio              : "Democratizing compute resource."
+  location         : "Champaign, IL,US"
   email            : 
   links:
     - label: "Email"
@@ -117,12 +117,12 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://gangmuk.github.io/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/gangmuk"
-    - label: "Youtube"
-      icon: "fas fa-fw fa-link"
-      url: "https://www.youtube.com/channel/UClK7xDxnCMRJ0KRRxL-irQQ"
+#    - label: "GitHub"
+#      icon: "fab fa-fw fa-github"
+#      url: "https://github.com/gangmuk"
+#    - label: "Youtube"
+#      icon: "fas fa-fw fa-link"
+#      url: "https://www.youtube.com/channel/UClK7xDxnCMRJ0KRRxL-irQQ"
 #    - label: "Twitter"
 #      icon: "fab fa-fw fa-twitter-square"
 #      # url: "https://twitter.com/"
