--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site Settings
 title: My Resume
 #url: 'http://webjeda.com'
-url: "https://gangmuk.github.io/"'
+url: "https://gangmuk.github.io/"
 
 #change it according to your repository name
 # disabling since we are using a custom domain
