--- a/_data/data.yml
+++ b/_data/data.yml
@@ -166,13 +166,16 @@ skills:
 
     toolset:
       - name: C++
-        level: 70%
+        level: 80%
 
       - name: Python
-        level: 60%
+        level: 70%
 
       - name: TensorFlow
-        level: 40%
+        level: 50%
+
+      - name: PyTorch
+        level: 50%
 
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
