Update Project intro as a test.

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -115,9 +115,7 @@ experiences:
 projects:
     title: Projects
     intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+      gangmuk_1
     assignments:
       - title: Velocity
         link: "#hook"
