--- a/_data/data.yml
+++ b/_data/data.yml
@@ -140,9 +140,7 @@ projects:
 publications:
     title: Publications
     intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
+      gangmuk_2
     papers:
       - title: The Art of Computer Programming
         link: "#"
