update zico and add one more word, space in between as a sentence test.

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -115,9 +115,9 @@ experiences:
 projects:
     title: Projects
     intro: >
-      gangmuk_1
+      gangmuk_1 ganmguk_11
     assignments:
-      - title: Velocity
+      - title: Zico
         link: "#hook"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
