update Zico zico as a test sentence.

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -117,7 +117,7 @@ projects:
     intro: >
       gangmuk_1 ganmguk_11
     assignments:
-      - title: Zico
+      - title: Zico zico
         link: "#hook"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
