--- a/_data/data.yml
+++ b/_data/data.yml
@@ -121,7 +121,7 @@ projects:
         link: "#hook"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
-      - title: DevStudio.
+      - title: DevStudio:.
         link: "#"
         tagline: "A responsive website template designed to help web developers/designers market their services."
 
