Update Zico Efficient GPU Memory.

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -117,7 +117,7 @@ projects:
     intro: >
       gangmuk_1 ganmguk_11 gangmuk_111
     assignments:
-      - title: Zico Efficient GPU
+      - title: Zico Efficient GPU Memory
         link: "#hook"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
