--- a/_data/data.yml
+++ b/_data/data.yml
@@ -75,10 +75,21 @@ education:
 #            - Bullet point 2
       - degree: BSc in Computer Sciene
         university: UNIST
-        time: 2012 - 2019
-        details: |
-            - Bullet point Period includes 2 years of military service.
+        time: 2012 - 2019 (including 2 years of military service.)
+#        details: |
+#            - Bullet point Period includes 2 years of military service.
 #            - Bullet point 22
+
+publications:
+    title: Publications
+    intro: |
+      
+    papers:
+      - title: "Zico Efficient GPU Memory Sharing for Concurrent DNN Training.."
+        link: "#"
+        authors: Donald E. Knuth
+        conference: Addison-Wesley, 1968
+
 experiences:
     title: Experiences
     info:
@@ -112,50 +123,18 @@ experiences:
             Wrote a script using Unreal Engine 4 that generates super resolution panoramic image dataset for light field experiment in virtual reality.
             - Supervisor: Ignace Saenan
 
-projects:
-    title: Projects
-    intro: >
-      gangmuk_1 ganmguk_11 gangmuk_111
-    assignments:
-      - title: Zico Efficient GPU Memory
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
-
-      - title: DevStudio:.
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-publications:
-    title: Publications
-    intro: |
-      gangmuk_2
-    papers:
-      - title: "Zico Efficient GPU Memory Sharing for Concurrent DNN Training.."
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
-
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
+#projects:
+#    title: Projects
+#    intro: >
+#      gangmuk_1 ganmguk_11 gangmuk_111
+#    assignments:
+#      - title: Zico Efficient GPU Memory
+#        link: "#hook"
+#        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+#
+#      - title: DevStudio:.
+#        link: "#"
+#        tagline: "A responsive website template designed to help web developers/designers market their services."
 
 skills:
     title: Skills &amp; Proficiency
