--- a/_data/data.yml
+++ b/_data/data.yml
@@ -57,7 +57,7 @@ career-profile:
       Hello, I am a first year PhD student in Computer Science at the University of Illinois Urbana-Champaign. I am advised by prof.Brighten Godfrey. My research interest lies in large scale multi-tenant cloud system and system for machine learning. Currently, I am focusing on Microservice architecture and systems for machine laerning. I am looking for a 2023 summer PhD internship.
 
 education:
-    title: Computer Science
+    title: PhD in Computer Science
     info:
       - degree: PhD in Computer Science
         university: University of Illinois Urbana-Champaign
@@ -66,14 +66,14 @@ education:
 #          System for ML, Microservice architecture, Large scale system.
 #            - Bullet point 1
 #            - Bullet point 2
-      - degree: MSc in Computer Science
+      - degree: MS in Computer Science
         university: UNIST
         time: 2019 - 2021
 #        details: |
 #          System for ML
 #            - Bullet point 1
 #            - Bullet point 2
-      - degree: BSc in Computer Sciene
+      - degree: BS in Computer Sciene
         university: UNIST
         time: 2012 - 2019 (including 2 years of military service.)
 #        details: |
@@ -87,8 +87,8 @@ publications:
     papers:
       - title: "Zico Efficient GPU Memory Sharing for Concurrent DNN Training.."
         link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
+        authors: Gangmuk Lim, Jeongseob Ahn, Wencong Xiao, Youngjin Kwon, Myeongjae Jeon. 
+        conference: USENIX Annual Technical Conference (USENIX ATC), Jul. 2021.
 
 experiences:
     title: Experiences
