--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Gangmuk
-middle_name: 
+middle_name: A
 last_name: Lim
 email: gangmuk2@illinois.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
