--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@
 title: Gangmuk Lim
 description: >- # this means to ignore newlines until "baseurl:"
   Bay is a minimal Jekyll Theme.
-baseurl: # the subpath of the site
+baseurl: ""
+photourl: "/assets/img/photos"
 url: "https://gangmuk.github.io" # the base hostname & protocol for the site
 og_image: /assets/img/gangmuk.png
 google_analytics: "UA-83979019-1"
