made code block theme prettier
Signed-off-by: gangmuk <gangmuk@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+  - _posts/unpublished/
 
 # Used for defeating caching
 version: 1
